[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/icons/chevron-right_white_16x16.svg" type="Texture" id=1]
[ext_resource path="res://src/Toolbox/DebugView/FileView/DebugFileValues.gd" type="Script" id=2]
[ext_resource path="res://src/Generic/AnimatedToolButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/arrow-left_white_24x24.svg" type="Texture" id=5]
[ext_resource path="res://src/Toolbox/DebugView/FileView/DebugFileView.gd" type="Script" id=6]

[node name="DebugFileView" type="ScrollContainer"]
margin_right = 284.0
margin_bottom = 625.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 284.0
margin_bottom = 625.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Back" parent="Container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 284.0
margin_bottom = 32.0
text = "FILE debug"
icon = ExtResource( 5 )
signal_on_pressed = "debug_view_displayed"

[node name="Values" type="VBoxContainer" parent="Container"]
margin_top = 48.0
margin_right = 284.0
margin_bottom = 180.0
custom_constants/separation = 8
script = ExtResource( 2 )

[node name="DirtyRegistredFile" parent="Container/Values" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 284.0
margin_bottom = 24.0
toggle_mode = true
text = "Dirty Registred File"
icon = ExtResource( 1 )
align = 0

[node name="DirtyRegistredFileData" type="RichTextLabel" parent="Container/Values"]
visible = false
margin_top = 46.0
margin_right = 280.0
margin_bottom = 246.0
rect_min_size = Vector2( 280, 200 )
text = "plachodler 
asd
asd
asd
as"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirtyUnregistredFile" parent="Container/Values" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 284.0
margin_bottom = 56.0
toggle_mode = true
text = "Dirty Unregistred File"
icon = ExtResource( 1 )
align = 0

[node name="DirtyUnregistredFileData" type="RichTextLabel" parent="Container/Values"]
visible = false
margin_top = 72.0
margin_right = 280.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditedFile" parent="Container/Values" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 284.0
margin_bottom = 88.0
toggle_mode = true
text = "Edited File"
icon = ExtResource( 1 )
align = 0

[node name="EditedFileData" type="RichTextLabel" parent="Container/Values"]
visible = false
margin_top = 72.0
margin_right = 280.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="HBoxContainer" parent="Container/Values"]
margin_top = 96.0
margin_right = 284.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Container/Values/State"]
margin_right = 152.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "State"

[node name="Value" type="Label" parent="Container/Values/State"]
margin_left = 156.0
margin_right = 284.0
margin_bottom = 14.0
text = "unregistred_pristine"

[node name="PreviousState" type="HBoxContainer" parent="Container/Values"]
margin_top = 118.0
margin_right = 284.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="Container/Values/PreviousState"]
margin_right = 152.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Previous State"

[node name="Value" type="Label" parent="Container/Values/PreviousState"]
margin_left = 156.0
margin_right = 284.0
margin_bottom = 14.0
text = "unregistred_pristine"
